Stylesheet/emote/tag updates 2013-02-11

--- a/source-css/arborus.css
+++ b/source-css/arborus.css
@@ -432,3 +432,28 @@ a[href|="/ohmy"] {
     width: 200px;
     height: 145px;
     background-image: url(%%chrysbounce200%%) }
+
+a[href|="/dyedrink"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 138px;
+    height: 150px;
+    background-image: url(%%dyedrink%%) }
+
+a[href|="/twixierape"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 172px;
+    background-image: url(%%trixresize%%) }
+
+a[href|="/geneticallymodifiedsalamanderwithafacejustlikegeorgeclooney"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 150px;
+    height: 148px;
+    background-image: url(%%Salamander%%) }
+
