--- a/source-css/berrytubelounge.css
+++ b/source-css/berrytubelounge.css
@@ -455,6 +455,117 @@ height: 86px;
 background-image: url(%%pixpunch%%) !important
 }
 
+a[href|="/ppmoustache"]{
+display:block;
+clear: none;
+float: left;
+width: 118px;
+height: 140px;
+background-image: url(%%ppmoustache%%) !important
+}
+
+a[href|="/lunawatchesyousleep"]{
+display:block;
+clear: none;
+float: left;
+width: 176px;
+height: 140px;
+background-image: url(%%bestluna%%) !important
+}
+
+a[href|="/rdtank"]{
+display:block;
+clear: none;
+float: left;
+width: 180px;
+height: 100px;
+background-image: url(%%rdtank%%) !important
+}
+
+a[href|="/scootanuzzles"]{
+display:block;
+clear: none;
+float: left;
+width: 197px;
+height: 120px;
+background-image: url(%%dashscoots%%) !important
+}
+
+a[href|="/swagisthisidonteven"]{
+display:block;
+clear: none;
+float: left;
+width: 134px;
+height: 140px;
+background-image: url(%%swagisthisidonteven%%) !important
+}
+
+a[href|="/abbeard"]{
+display:block;
+clear: none;
+float: left;
+width: 150px;
+height: 140px;
+background-image: url(%%abbeard%%) !important
+}
+
+a[href|="/abdonotwant"]{
+display:block;
+clear: none;
+float: left;
+width: 179px;
+height: 140px;
+background-image: url(%%abdonotwant%%) !important
+}
+
+a[href|="/spikesad"]{
+display:block;
+clear: none;
+float: left;
+width: 128px;
+height: 140px;
+background-image: url(%%spikesad%%) !important
+}
+
+a[href|="/gummytreadmill"]{
+display:block;
+clear: none;
+float: left;
+width: 216px;
+height: 140px;
+background-image: url(%%gummytreadmill%%) !important
+}
+
+a[href|="/trixchargin"]{
+display:block;
+clear: none;
+float: left;
+width: 140px;
+height: 140px;
+background-image: url(%%trixchargin%%) !important
+}
+
+
+/* Added by Cades because lol */
+
+a[href|="/itsafake"], a[href|="/itsfake"]{
+display:block;
+clear: none;
+float: left;
+width: 150px;
+height: 113px;
+background-image: url(%%itsafake%%) !important
+}
+a[href|="/itsreal"], a[href|="/dontyouunderstand"], a[href|="/itsareal"]{
+display:block;
+clear: none;
+float: left;
+width: 150px;
+height: 125px;
+background-image: url(%%itsreal%%) !important
+}
+
+/* End Cades' Edits */
 
 
 /* Sheet offsets */
