--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -23,11 +23,11 @@ div.titlebox span.word {
 
 div.titlebox .subscribers span.number:after
 {
-    content:" people";
+    content:" ponies";
 }
 div.titlebox .users-online span.number:after
 {
-    content:" not having fun";
+    content:" doin' stuff";
 }
 
 .sidecontentbox .flair-cmc, .titlebox .flair-cmc, .sidecontentbox .flair-cmcchinchy, .titlebox .flair-cmcchinchy, .sidecontentbox .flair-pinkiepiecmc, .titlebox .flair-pinkiepiecmc {
@@ -1730,10 +1730,10 @@ Random Plounge Buggery
     clear: both;
     text-align: center;
     width: 100%;
-    background-image: url(%%AmbassadorBelle%%);
-    /*background-position: bottom center;*/
+    background-image: url(%%hank-stare%%);
+    /*Credit for Hank Belle goes to /u/stewartisme*/
     background-repeat: no-repeat;
-    margin-bottom: -0px;
+    margin-bottom: -26px;
     background-position: 50% 100%;/*Path's OCD was here. Fuck yo OCD, ~Veller :((( ~Path*/
     }
 html:lang(nv) .side p a[href="http://reddit.com/r/MLPLounge/"]
@@ -1769,12 +1769,12 @@ h3.imgTitle{
 
 .side a[href="http://www.reddit.com/r/MLPLounge/new/"]{
    display: block;
-   height: 70px;
-   width: 70px;
-   background: url(%%AmbassadorRarity%%);
+   height: 80px;
+   width: 89px;
+   background: url(%%tiny-apathia%%);
    position: fixed; 
    top: 260px;
-   right: -5px;
+   right: -10px;
    z-index: 999;
 }
 
