--- a/source-css/mylittlealicorn.css
+++ b/source-css/mylittlealicorn.css
@@ -7,7 +7,7 @@ a[href="/generictwilicorn"], a[href="/princesstwi"], a[href="/princesstwi2"], a[
     height: 140px!important;
     background-image:url(%%emotesheet%%);
 }
-a[href="/wavingtwilicorn"], a[href="/bashfultwilicorn"] {
+a[href="/wavingtwilicorn"], a[href="/bashfultwilicorn"], a[href="/twilicornsmile"], a[href="/twilicornmagic"], a[href="/confusedtwilicorn"] {
     display: block;
     clear: none;
     float: left;
@@ -28,10 +28,10 @@ a[href="/princesstwi"] { background-position: 0 840px; }
 a[href="/stellartwilicorn"] { background-position: 140px 840px; }
 a[href="/octaviacorn"] { background-position: 0 700px; }
 a[href="/princesspp"] { background-position: 140px 700px; }
-a[href="/princessrbd"] { background-position:0 560px; }
+a[href="/princessrbd"], a[href="/confusedtwilicorn"] { background-position:0 560px; }
 a[href="/princessrarity"] { background-position:140px 560px; }
-a[href="/princessaj"] { background-position:0 420px; }
-a[href="/princessfs"] { background-position:140px 420px; }
+a[href="/princessaj"], a[href="/twilicornsmile"] { background-position:0 420px; }
+a[href="/princessfs"], a[href="/twilicornmagic"] { background-position:140px 420px; }
 a[href="/scootacorn"], a[href="/wavingtwilicorn"] { background-position:0 280px; }
 a[href="/princessts"], a[href="/bashfultwilicorn"] { background-position:140px 280px; }
 
@@ -44,7 +44,7 @@ a[href="/sgenerictwilicorn"], a[href="/sprincesstwi"], a[href="/sprincesstwi2"],
     height: 70px!important;
     background-image:url(%%emotesheetsmall%%);
 }
-a[href="/swavingtwilicorn"], a[href="/sbashfultwilicorn"] {
+a[href="/swavingtwilicorn"], a[href="/sbashfultwilicorn"], a[href="/stwilicornsmile"], a[href="/stwilicornmagic"], a[href="/sconfusedtwilicorn"] {
     display: block;
     clear: none;
     float: left;
@@ -64,10 +64,10 @@ a[href="/sprincesstwi"] { background-position: 0 420px; }
 a[href="/sstellartwilicorn"] { background-position: 70px 420px; }
 a[href="/soctaviacorn"] { background-position: 0 350px; }
 a[href="/sprincesspp"] { background-position: 70px 350px; }
-a[href="/sprincessrbd"] { background-position:0 280px; }
+a[href="/sprincessrbd"], a[href="/sconfusedtwilicorn"] { background-position:0 280px; }
 a[href="/sprincessrarity"] { background-position:70px 280px; }
-a[href="/sprincessaj"] { background-position:0 210px; }
-a[href="/sprincessfs"] { background-position:70px 210px; }
+a[href="/sprincessaj"], a[href="/stwilicornsmile"] { background-position:0 210px; }
+a[href="/sprincessfs"], a[href="/stwilicornmagic"] { background-position:70px 210px; }
 a[href="/sscootacorn"], a[href="/swavingtwilicorn"] { background-position:0 140px; }
 a[href="/sprincessts"], a[href="/sbashfultwilicorn"] { background-position:70px 140px; }
 
