--- a/source-css/mylittlemotorhead.css
+++ b/source-css/mylittlemotorhead.css
@@ -21,11 +21,11 @@ div.titlebox span.word {
     }
 div.titlebox .subscribers span.number:after
 {
-    content:" Motorheads";
+    content:" Equestrian rally racers";
 }
 div.titlebox .users-online span.number:after
 {
-    content:" online";
+    content:" racing";
 }
 /***********************************************************************************************************************************************************************************
 *
