--- a/source-css/vinylscratch.css
+++ b/source-css/vinylscratch.css
@@ -81,7 +81,7 @@ body.res-nightmode:first-of-type {background-color: transparent!important;}
 |ALSO SOME CREDIT GOES TO RAHLYN AND MRJOKER7854
 |              RAHLYN IS THE FLAIR GOD
 |         HAI GUIZ I DID NAMEZ SO I HELPED -Joker                                     
-|                                                
+|                              
 */
 
 /* 1: PAGE STYLE CHANGES*/
@@ -432,7 +432,7 @@ body.res-nightmode:first-of-type .flair { background-color: transparent!importan
 
 /*vs_start*/
 	
-a[href|='/vswink'],a[href|='/vs22'],a[href|='/shrug'],a[href|='/vsshrug'],a[href|='/tableflip'],a[href|='/vsbass'],a[href|='/vs15'],a[href|='/vscurious'],a[href|='/vs13'],a[href|='/vsdeal'],a[href|='/vs01'],a[href|='/vsderp'],a[href|='/vs02'],a[href|='/vsfilly'],a[href|='/vs07'],a[href|='/vshair'],a[href|='/vs20'],a[href|='/vshappy'],a[href|='/vs14'],a[href|='/vshey'],a[href|='/vs12'],a[href|='/vshooves'],a[href|='/vs04'],a[href|='/vsjuice'],a[href|='/vs23'],a[href|='/vslook'],a[href|='/vs05'],a[href|='/vslying'],a[href|='/vs03'],a[href|='/vsmeh'],a[href|='/vs21'],a[href|='/vsmine'],a[href|='/vs25'],a[href|='/vsmog'],a[href|='/vs08'],a[href|='/vsnope'],a[href|='/vs26'],a[href|='/vsohyou'],a[href|='/vs00'],a[href|='/vsomg'],a[href|='/vs06'],a[href|='/vsoooo'],a[href|='/vs16'],a[href|='/vssad'],a[href|='/vs10'],a[href|='/vssup'],a[href|='/vs24'],a[href|='/vstear'],a[href|='/vs11'],a[href|='/vswtf'],a[href|='/vs27'], a[href|='/vswhathefuck'],a[href|='/vsyds'],a[href|='/vs17'], a[href|='/vsyoudontsay'],a[href|='/vslaying'],a[href|='/laying'],a[href|='/vsplot'],a[href|='/vscute'],a[href|='/vs18'],a[href|='/vssalute'],a[href|='/vs28'],a[href|='/vsboring'], a[href|="/vsdrawponies"], a[href|="/vshnngg"], a[href|="/hnnng"],a[href|='/vs09'], a[href|='/vssquee'],a[href|='/vs19'],a[href|='/vs29'], a[href|='/vseyeroll'],a[href|='/vsheh'] {
+a[href|='/vswink'],a[href|='/vs22'],a[href|='/shrug'],a[href|='/vsshrug'],a[href|='/tableflip'],a[href|='/vsbass'],a[href|='/vs15'],a[href|='/vscurious'],a[href|='/vs13'],a[href|='/vsdeal'],a[href|='/vs01'],a[href|='/vsderp'],a[href|='/vs02'],a[href|='/vsfilly'],a[href|='/vs07'],a[href|='/vshair'],a[href|='/vs20'],a[href|='/vshappy'],a[href|='/vs14'],a[href|='/vshey'],a[href|='/vs12'],a[href|='/vshooves'],a[href|='/vs04'],a[href|='/vsjuice'],a[href|='/vs23'],a[href|='/vslook'],a[href|='/vs05'],a[href|='/vslying'],a[href|='/vs03'],a[href|='/vsmeh'],a[href|='/vs21'],a[href|='/vsmine'],a[href|='/vs25'],a[href|='/vsmog'],a[href|='/vs08'],a[href|='/vsnope'],a[href|='/vs26'],a[href|='/vsohyou'],a[href|='/vs00'],a[href|='/vsomg'],a[href|='/vs06'],a[href|='/vsoooo'],a[href|='/vs16'],a[href|='/vssad'],a[href|='/vs10'],a[href|='/vssup'],a[href|='/vs24'],a[href|='/vstear'],a[href|='/vs11'],a[href|='/vswtf'],a[href|='/vs27'], a[href|='/vswhathefuck'],a[href|='/vsyds'],a[href|='/vs17'], a[href|='/vsyoudontsay'],a[href|='/vslaying'],a[href|='/laying'],a[href|='/vsplot'],a[href|='/vscute'],a[href|='/vs18'],a[href|='/vssalute'],a[href|='/vs28'],a[href|='/vsboring'], a[href|="/vsdrawponies"], a[href|="/vshnngg"], a[href|="/hnnng"],a[href|='/vs09'], a[href|='/vssquee'],a[href|='/vs19'],a[href|='/vs29'], a[href|='/vseyeroll'],a[href|='/vsheh'],a[href|='/vswubs'],a[href|='/vsmilkshake'],a[href|='/vsyes'],a[href|='/vsconcerned'],a[href|='/vsa2'],a[href|='/vsa1'],a[href|='/vsa0'],a[href|='/vsb1']{
     display: block;
     clear: none;
     float: left;
@@ -475,6 +475,24 @@ a[href|="/vsdrawponies"], a[href|="/vshnngg"], a[href|="/hnnng"],a[href|='/vs09'
 a[href|='/vssquee'] {width:102px; height:80px;background-position: -422px -147px}
 a[href|='/vs19'], a[href|='/vseyeroll']{width:80px; height:77px;background-position: -415px -672px}
 a[href|='/vs29'],a[href|='/vsheh']{width:67px; height:80px;background-position: -417px -749px}
+a[href|='/vswubs'],a[href|='/vsa0']{width:70px; height:65px;background-position: -302px -324px}
+a[href|='/vsmilkshake'],a[href|='/vsa1']{width:70px; height:92px;background-position: -394px -332px}
+a[href|='/vsconcerned'],a[href|='/vsb1']{width:70px; height:97px;background-position: -341px -153px}
+a[href|='/vsyes'],a[href|='/vsa2']{width:70px; height:73px;background-position: 0px -765px}
+
+/* Second Flair Sheet */
+
+a[href|='/vspuppy'],a[href|='/vssuave'],a[href|='/vsexcited'],a[href|='/vsb0']{
+    display: block;
+    clear: none;
+    float: left;
+    background-image: url(%%vssheet2%%) !important
+    }
+
+a[href|='/vspuppy']{width:148px; height:145px;background-position: -145px 0px}
+a[href|='/vssuave'],a[href|='/vsb0']{width:70px; height:83px;background-position: -145px -145px}
+a[href|='/vsexcited']{width:132px; height:295px;background-position: 0px 0px}
+
 
 /* Other Emotes*/
 a[href|='/vsdance'] { width:110px; height:110px; background-image: url(%%vsdance%%); display: block; clear: none; float: left; }
@@ -645,7 +663,8 @@ a.author[href$="Serious_Hacker"],
 a.author[href$="Toklankitsune"],
 a.author[href$="bryvood"],
 a.author[href$="otwem"],
-a.author[href$="Kireas"]
+a.author[href$="Kireas"],
+a.author[href$="AlisterDX"]
 
 { 
 font-size:0!important; 
@@ -671,7 +690,8 @@ a.author[href$="Serious_Hacker"]:before ,
 a.author[href$="Toklankitsune"]:before ,
 a.author[href$="bryvood"]:before ,
 a.author[href$="otwem"]:before ,
-a.author[href$="Kireas"]:before 
+a.author[href$="Kireas"]:before, 
+a.author[href$="AlisterDX"]:before 
 
 
 {
@@ -697,12 +717,14 @@ a.author[href$="Toklankitsune"]:before {content:"DJ T0ki"}
 a.author[href$="bryvood"]:before {content:"DJ Toaster Scratchaloo"}
 a.author[href$="otwem"]:before {content:"Otwem Scratch"}
 a.author[href$="Kireas"]:before {content:"Octavia"}
+a.author[href$="AlisterDX"]:before {content:"MySecretVinylAccount"}
 
 /* Replacing somebody's name color? Put the css here. */
 
 .author[href$="Ninja8259"] { color:aqua !important }
 .author[href$="mrjoker7854"] { color:pink !important }
 .author[href$="Kireas"] { color:purple !important }
+.author[href$="AlisterDX"] { color:red !important }
 
 .comments:nth-child(n + 1):before {
     content: "♪ ♫ ♩ ";
