--- a/source-css/mlploungesteamgroup.css
+++ b/source-css/mlploungesteamgroup.css
@@ -111,7 +111,13 @@ a.author[href$="ctare"]:after {
     display: block;
     letter-spacing: normal;
     }
-
+a.author[href$="starkinmn"]:after
+{
+color:#000; 
+font-size:10px!important; 
+letter-spacing:normal;
+content:"  Give me my fucking good flair, asshooe horsefuckers";
+}
 
 /*Self-Post Image, No Image, Spoiler Image*/
 .thumbnail.self {
