--- a/source-css/mlpvectors.css
+++ b/source-css/mlpvectors.css
@@ -139,6 +139,12 @@ background-position: 0 - 70px; width: 20px; height: 20px; }
 background-position: 0 -140px; width: 20px; height: 20px; } 
 .flair-photoshop{
  background-position: 0 - 210px; width: 20px; height: 20px; }
+.flair-pscape{
+background: url(%%pscape2%%);
+background-position: 0 - 0px; width: 20px; height: 20px;}
+.flair-pscapetest{
+background: url(%%pflair3%%);
+background-position: 0 - 0px; width: 20px; height: 20px;}
 
 /* The forbidden Master flair */
 
