--- a/source-css/mylittlefortress.css
+++ b/source-css/mylittlefortress.css
@@ -172,9 +172,11 @@ a.author[href$="EtherealDragon"]:after {
     content: ": Dragon Emissary"
     }
 
+/*
 a.author[href$="ovenmittbandit"]:after {
     content: ": Server admin" 
     }
+*/
 a.author[href$="timbaer"]:after {
     content: ": server timbaer" 
     }
@@ -229,6 +231,9 @@ a.author[href$="Stranghill"] {visibility:hidden; font-size:0;}
 a.author[href$="Stranghill"]:after {
     visibility:visible; font-size: 12px; color: #369; content: "lunaREvolution" 
 }
+
+/* a.author[href*="user/%NAME%"]{color:#0099FF; font-size:10px; font-weight: bold; text-shadow: -1px 0 black, 0 1px black,
+      1px 0 black, 0 -1px black} */
 
 
 /* STEAM NAMES */
@@ -622,7 +627,7 @@ a[href="/freakout"]:hover:after {
      
     .titlebox .usertext-body .md ol {
     width: auto;
-    background: url(%%spikepoint%%) no-repeat scroll 3px 0px #fff;
+    background: url(%%csheadshot%%) no-repeat scroll 18px 3px #fff;
     border: 2px solid #b13637;
     position: absolute;
     top: 18px;
